# island

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: docs.yml  release.yml
docs/: authoring-extensions.md  index.md  integrations-and-serve.md  perf-overlay-freeze.md  roadmap.md  sdk-roadmap.md  sdk-services.md
docs/.vitepress/: config.ts
docs/en/: index.md
docs/en/extensions/: docker.md  toolchain.md
docs/en/guide/: anatomie.md  demarrage.md  distribution.md  introduction.md  recettes.md  sdk.md  services.md
docs/en/reference/: authoring.md  integrations.md  perf-overlay-freeze.md  roadmap.md  services-catalog.md  updates.md
docs/extensions/: docker.md  toolchain.md
docs/fr/: 01-introduction.md  03-anatomie-et-build.md  04-le-sdk.md  05-services-et-permissions.md  06-recettes.md  07-distribution.md  README.md
docs/guide/: demarrage.md  distribution.md
docs/internal/: api.md  extensions-as-api.md
docs/reference/: authoring.md  services-catalog.md  updates.md
public/island-runtime/: sdk.mjs  vue.mjs
scripts/: build-extension.mjs  gen-runtime-shims.mjs  pack-extension.mjs  release.mjs
src/: App.vue  island-bridge.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: host.rs  launcher.rs  lib.rs  overlay.rs
src-tauri/src/ext/: install.rs  mod.rs  scaffold.rs  storage.rs
src-tauri/src/services/: clipboard.rs  mod.rs  net.rs  pty.rs  secrets.rs
src-tauri/src/services/apps/: files.rs  mod.rs  windows.rs
src-tauri/src/services/audio/: mod.rs  windows.rs
src-tauri/src/services/capture/: mod.rs  windows.rs
src-tauri/src/services/input/: mod.rs  windows.rs
src-tauri/src/services/media/: mod.rs  windows.rs
src-tauri/src/services/reserved/: mod.rs  windows.rs
src-tauri/src/services/system/: mod.rs  windows.rs
src-tauri/src/services/tts/: mod.rs  windows.rs
src-tauri/src/services/windows/: mod.rs  windows.rs
src-tauri/templates/complete/: Config.vue  README.md  View.vue  index.ts  manifest.json  package.json  store.ts  tailwind.css
src-tauri/templates/minimal/: View.vue  index.ts  manifest.json  vite.config.ts
src/components/: AnimatedList.vue  Titlebar.vue
src/composables/: bus.ts  dev.ts  extensions.ts  i18n.ts  idle.ts  islandLayout.ts  islandTheme.ts  launcher.ts  notifications.ts  overlay.ts  presence.ts  shortcuts.ts  updater.ts
src/i18n/: en.json  fr.json
src/sdk/: i18n.ts  index.ts  island.ts
src/sdk/ui/: Select.vue  Slider.vue  Toggle.vue
src/sdk/ui/context-menu/: ContextMenuContent.vue  ContextMenuItem.vue  ContextMenuSeparator.vue  index.ts
src/sdk/ui/kbd/: Kbd.vue
src/sdk/ui/select/: SelectContent.vue
src/sdk/ui/slider/: Slider.vue
src/stores/: appStore.ts
src/windows/: Create.vue  FloatWindows.vue  Install.vue  Island.vue  IslandSurface.vue  Launcher.vue  MinimizedDock.vue  Modal.vue  NotifCard.vue  Overlay.vue  RegionSelect.vue  Settings.vue  UiNode.vue
